# mytardis

./: .babelrc  .codacy.yml  .dockerignore  .eslintignore  .eslintrc  .eslintrc.angular  .eslintrc.jquery  .eslintrc.react  .foreman  .gitignore  .gitmodules  .jshintrc  .pylintrc  .pylintrc.travis  .pyup.yml  .readthedocs.yml  .snyk  .travis.yml  CONTRIBUTING.rst  CONTRIBUTORS.rst  CONTRIBUTORS.txt  COPYING.rst  COPYING.txt  Dockerfile  Dockerfile-base  Dockerfile-build  Dockerfile-django  Dockerfile-run  Dockerfile-test  Gruntfile.js  INSTALL.rst  MANIFEST.in  Procfile  README.rst  README.txt  TestVenki.txt  bootstrap.py  build.sh  buildout-dev.cfg  buildout.cfg  (+49 more)
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: monthly_issue.md  patch_issue.md  release_template.md
.github/workflows/: codeql-analysis.yml  graphQL-api-test.yml  mytardis-ci-tests.yml  mytardis-matrix-test.yml  mytardis-npm-test.yml
.storybook/: main.js  preview.js
SemaphoreCI/: Dockerfile-base  README.rst  docker-build.yml  docker-test.yml
apache/: apache_django_wsgi.conf  django.wsgi
assets/css/: custom.css  default.css  facility-overview.css
assets/js/: index.js
assets/uoa/: NationalWeb-Bold.eot  NationalWeb-BoldItalic.eot  NationalWeb-Book.eot  NationalWeb-BookItalic.eot
docker-ci/: Dockerfile  Dockerfile-base  Dockerfile-build  Dockerfile-run  Dockerfile-test  README.rst  docker-build.yml  docker-compose.yaml  docker-test.yml
docs/: Makefile  admin.rst  api.rst  apps.rst  architecture.rst  authorisation.rst  backupdb.rst  changelog.rst  changes.rst  conf.py  contextual_views.rst  contributing.rst  develop.rst  generate-api-docs.py  generate-model-graphs.py  graphql.md  hpctardis.models.rst  hpctardis.rst  hpctardis.views.rst  hpctardis_migration.rst  hpctardis_systemadminmanual.rst  hpctardis_usermanual.rst  index.rst  index_hpctardis.rst  ingesting.rst  install.rst  introduction.rst  make.bat  migration.rst  old_requirements.txt  overview.rst  requirements.txt  rtfd.org-requirements.txt  schemaparamsets.rst  searching.rst  searchsetup.rst  storage.rst  tabs.rst  transfer.rst  unittest.rst  (+1 more)
docs/admin/: auth_httpbasicendpoint.rst  auth_ldap.rst  auth_tokenauth.rst  authentication.rst  database.rst  facility_overview.rst  filters.rst  install.rst  metadata.rst  s3_storage.rst  searchsetup.rst  storage.rst  task_priorities.rst
docs/apps/: contextual_views.rst  hsm.rst  oaipmh.rst  publication_forms.rst  publication_workflow.rst  social_auth.rst
docs/dev/: api.rst  architecture.rst  authorisation.rst  tests.rst
docs/dirhtml/: .buildinfo  index.html  objects.inv  searchindex.js
docs/pydoc/: index.rst
docs/ref/: app_migration.rst  app_oaipmh.rst  auth_framework.rst  auth_httpbasicendpoint.rst  auth_ldap.rst  auth_localdb.rst  auth_tokenauth.rst  download.rst  errors.rst  experimentparser.rst  filters.rst  importparamsform.rst  ldap_auth.rst  managers.rst  mets-example.rst  mets-format.rst  models-graphviz-all.rst  models.rst  processexperiment.rst  registerexperimentform.rst  sql-graphviz.rst  transfer.rst  vbl_auth.rst  views.rst
docs/users/: basics.rst  pub-workflow.rst  sftp.rst
e2e/Archived/: 013ChangeExperimentGroupSharingViewEdit.robot  014ChangeExperimentGroupSharingOwner.robot
e2e/DataDrivenTesting/: 01Login.robot  02OpenPublicationsPage.robot  03CreatePublications.robot
e2e/Resources/: 001MyTardisPublicPages.robot  Actions.robot  CreateUser.py  CreateUser.robot  InputData.robot  LocalSetUp.robot  ReusableKeywords.robot  ReusablePaths.robot  SetUp.robot  test.robot
features/: about_page.feature  access_dataset_with_files.feature  auth_methods.feature  create_dataset.feature  environment.py  experiment_sharing.feature  facility_overview.feature  front_page.feature  manage_groups_page.feature  migrate_account.feature  search.feature  sftp.feature  stats_page.feature
features/steps/: about_page.py  access_dataset_with_files.py  auth_methods.py  create_dataset.py  create_experiment.py  exp_sharing.py  facility_overview.py  front_page.py  manage_groups_page.py  migrate_account.py  my_data_page.py  search.py  sftp.py  stats_page.py  wait.py
foreman/: master.conf.erb  process.conf.erb  process_master.conf.erb
js_tests/: tests.html
js_tests/jquery/: main.test.js
js_tests/tardis_portal/: README.rst  index.js  main.test.js
management/commands/: backupdb.py
scripts/: docker-cmd.sh  docker-webapp.sh  wait-for-db.sh
tardis/: __init__.py  app_config.py  celery.py  celery_app.py  default_settings.py  docker_settings.py  env_settings.py  manage.py  schema.py  search_sites.py  settings.py  settings.py.bak  settings_changeme.py  settings_hpctardis.py  settings_microtardis.py  test_on_mysql_settings.py  test_on_postgresl_settings.py  test_on_postgresql_settings.py  test_settings.py  test_settings_microacls.py  urls.py  views.py
tardis/accounts/: oidc.py
tardis/analytics/: __init__.py  apps.py  ga.py  tracker.py
tardis/default_settings/: __init__.py  admins.py  analytics.py  api_v2.py  apps.py  apps_default_settings.py  auth.py  caches.py  celery.py  celery_settings.py  custom_views.py  database.py  debug.py  downloads.py  email.py  filters.py  frontend.py  graphql.py  i18n.py  localisation.py  logging.py  middlewares.py  publication.py  search.py  sftp.py  sharing.py  site_customisations.py  staging.py  static_files.py  static_files.py.pipeline  storage.py  templates.py  uploads.py  urls.py  verify.py
tardis/search/: datafile_index.py  urls.py  (+5 more)
tardis_portal/: 404.html  500.html  ExperimentParser.py  ImportParamsForm.py  MultiPartForm.py  PrivatePasswordForm.py  ProcessExperiment.py  RegisterExperimentForm.py  about.html  admin.py  blank_status.html  control_panel.html  deposit.html  experiment_index.html  import_params.html  index.html  ldap_auth.py  login.html  models.py  news.html  partners.html  portal_template.html  private_password_form.html  register_experiment.html  rfc3339.py  rif.xml  schema.html  search_datafile.html  search_experiment.html  site_settings.xml  tests.py  view_experiment.html  views.py
utils/: update-solr-schema.sh
(+1871 files in other folders)
