[tool.poetry]
name = "mytardis"
version = "5.0.0"
description = "UoA specific MyTardis"
authors = []
license = "GNU GPL 3"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.4"
wand = "0.6.6"
bleach = "3.3.0"
celery = "5.1.0"
django-extensions = "3.1.3"
django-elasticsearch-dsl = "^7.3"
django-form-utils = {git = "https://github.com/mytardis/django-form-utils.git"}
django-jstemplate = "1.3.8"
django-registration-redux = "2.9"
django-tastypie = "0.14.3"
django-user-agents = "0.4.0"
django-webpack-loader = "1.0.0"
django-widget-tweaks = "1.4.8"
django-storages = "1.11.1"
gunicorn = "^20.1.0"
gevent = "^22.10.2"
html2text = "^2020.1.16"
html5lib = "^1.1"
isodate = "0.6.0"
pyjwt = "2.1.0"
lxml = "^4.9.2"
pillow = "^9.5.0"
pyoai = "^2.5.0"
pystache = "^0.6.0"
python-dateutil = "^2.8.2"
python-magic = {git = "https://github.com/mytardis/python-magic.git"}
pytz = "^2023.3"
requests = "^2.31.0"
uritemplate = "^4.1.1"
django-graphql-jwt = "^0.3.4"
django-taggit = "^4.0.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^6"
sphinx-rtd-theme = "^1.2.2"


[tool.poetry.group.ldap]
optional = true


[tool.poetry.group.ldap.dependencies]
python-ldap = "^3.4.3"
ldap3 = "^2.9.1"


[tool.poetry.group.postgres]
optional = true

[tool.poetry.group.postgres.dependencies]
psycopg2-binary = "^2.9.6"


[tool.poetry.group.test.dependencies]
behave-django = "^1.4.0"
coverage = "^6"
django-coverage-plugin = "^3.0.0"
flexmock = "^0.11.3"
pylint = "^2.17.4"
pylint-django = "^2.5.3"
selenium = "^4.10.0"
coveralls = "^3.3.1"
codacy-coverage = "^1.3.11"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"

[tool.poetry.group.social_auth]
optional = true

[tool.poetry.group.social_auth.dependencies]
social-auth-app-django = "^5.2.0"

[tool.poetry.group.s3]
optional = true

[tool.poetry.group.s3.dependencies]
boto3 = "^1.26.155"

[tool.poetry.group.sftp]
optional=true

[tool.poetry.group.sftp.dependencies]
paramiko = "2.7.2"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = "tardis"  # change it for the name of your django project
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
